manifests/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: auth0-hello-world
  name: auth0-hello-world
spec:
  progressDeadlineSeconds: 1200
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: auth0-hello-world
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: auth0-hello-world
    spec:
      containers:
      - image: callone.azurecr.io/auth0-hello-world:1
        imagePullPolicy: IfNotPresent
        name: auth0-hello-world
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
