manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth0-hello-world
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auth0-hello-world
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
